Content | Added img and video from github

--- a/detail.html
+++ b/detail.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">       
           <div class="row">
-            <div class="col-md-6 offset-md-3"><img src="img/detail.png"></div>
+            <div class="col-md-6 offset-md-3"><img src="https://raw.githubusercontent.com/true-level/website/develop/img/detail.PNG"></div>
           </div>
         <!-- <div class="row">
             <div class="row">
