--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="tm-video-container">
                     <a href="/detail.html">
                         <video id="tm-welcome-video" class="tm-welcome-video" autoplay="" loop="" muted="">
-                            <source src="videos/video.mp4" type="video/mp4">
+                            <source src="https://raw.githubusercontent.com/true-level/website/develop/videos/video.MP4" type="video/mp4">
                         </video>
                     </a>                   
                 </div>
