--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="col-lg-12">
                     <div class="tm-video-container">
                         <a href="/detail.html">
-                            <video id="tm-welcome-video" class="tm-welcome-video" autoplay="" loop="" muted="">
+                            <video id="tm-welcome-video" class="tm-welcome-video" autoplay="" muted="" loop="" playsinline="" preload="auto">
                                 <source src="https://raw.githubusercontent.com/true-level/website/develop/videos/video.MP4" type="video/mp4">
                             </video>
                         </a>                   
